chore: add Burp Suite Pro testing checkbox to PR template

--- a/.github/PULL_REQUEST_TEMPLATE/pull_request.yml
+++ b/.github/PULL_REQUEST_TEMPLATE/pull_request.yml
@@ -46,6 +46,7 @@ body:
     description: Describe the testing you've done to verify your changes.
     placeholder: |
       - [ ] Tested with Burp Suite Community Edition
+      - [ ] Tested with Burp Suite Professional
       - [ ] Tested with local Ollama setup
       - [ ] Tested with OpenRouter API
   validations:
