docs: update README and .env-dist for OpenAI-compatible provider
- Update README.md with OpenAI-compatible provider documentation
- Translate .env-dist from French to English
- Add OpenAI-compatible environment variables to .env-dist and config_loader.py

--- a/.env-dist
+++ b/.env-dist
@@ -1,29 +1,39 @@
-# Configuration du cache
-# Taille maximale du cache en Mo
+# Cache Configuration
+# Maximum cache size in megabytes
 CACHE_MAX_SIZE_MB=100
-# Durée maximale de conservation des entrées du cache en jours
+# Maximum number of days to keep cache entries
 CACHE_MAX_AGE_DAYS=30
-# Nombre maximum d'entrées dans le cache
+# Maximum number of entries in the cache
 CACHE_MAX_ENTRIES=1000
 
-# Configuration des messages
-# Taille maximale d'un message (en caractères) avant troncature
+# Message Configuration
+# Maximum message length (in characters) before truncating
 MAX_MESSAGE_LENGTH=4000
 
-# Configuration OpenRouter
-# Nombre maximum de tokens pour les réponses OpenRouter
+# OpenRouter Configuration
+# Maximum tokens for OpenRouter responses
 OPENROUTER_MAX_TOKENS=800
-# URL de l'API OpenRouter (laisser vide pour utiliser la valeur par défaut)
+# Custom OpenRouter API URL (leave empty for default)
 OPENROUTER_API_URL=
-# Modèle OpenRouter par défaut (laisser vide pour sélectionner manuellement)
+# Default OpenRouter model (leave empty to select manually)
 OPENROUTER_DEFAULT_MODEL=
-# Température pour les requêtes OpenRouter (0.0 à 1.0)
+# Temperature for OpenRouter responses (0.0 to 1.0)
 OPENROUTER_TEMPERATURE=0.3
 
-# Configuration Ollama
-# URL de l'API Ollama (laisser vide pour utiliser la valeur par défaut)
+# Ollama Configuration
+# Custom Ollama API URL (leave empty for default)
 OLLAMA_API_URL=
-# Modèle Ollama par défaut (laisser vide pour sélectionner manuellement)
+# Default Ollama model (leave empty to select manually)
 OLLAMA_DEFAULT_MODEL=
-# Température pour les requêtes Ollama (0.0 à 1.0)
+# Temperature for Ollama responses (0.0 to 1.0)
 OLLAMA_TEMPERATURE=0.3
+
+# OpenAI-compatible Configuration
+# Custom OpenAI-compatible API URL (e.g., https://api.openai.com/v1/chat/completions)
+OPENAI_API_URL=
+# API key for OpenAI-compatible API
+OPENAI_API_KEY=
+# Default model name (e.g., gpt-4, claude-3-opus, etc.)
+OPENAI_DEFAULT_MODEL=
+# Temperature for OpenAI-compatible responses (0.0 to 1.0)
+OPENAI_TEMPERATURE=0.3
