--- a/.env-dist
+++ b/.env-dist
@@ -15,6 +15,8 @@ MAX_MESSAGE_LENGTH=4000
 OPENROUTER_MAX_TOKENS=800
 # Custom OpenRouter API URL (leave empty for default)
 OPENROUTER_API_URL=
+# API key for OpenRouter
+OPENROUTER_API_KEY=
 # Default OpenRouter model (leave empty to select manually)
 OPENROUTER_DEFAULT_MODEL=
 # Temperature for OpenRouter responses (0.0 to 1.0)
