fix: correct .env file parser to handle empty values
Fix bug where empty values in .env (like OPENROUTER_API_URL=) would
capture the next line as the value.

Changed from regex-based parsing to line-by-line parsing with split('='),
which correctly handles empty values and multiline strings.

Also updated .env-dist to use "" explicitly for empty values to make
it clearer what counts as an empty value vs a missing line.

--- a/.env-dist
+++ b/.env-dist
@@ -13,29 +13,30 @@ MAX_MESSAGE_LENGTH=4000
 # OpenRouter Configuration
 # Maximum tokens for OpenRouter responses
 OPENROUTER_MAX_TOKENS=800
-# Custom OpenRouter API URL (leave empty for default)
-OPENROUTER_API_URL=
+# Custom OpenRouter API URL (use "" for default)
+OPENROUTER_API_URL=""
 # API key for OpenRouter
-OPENROUTER_API_KEY=
-# Default OpenRouter model (leave empty to select manually)
-OPENROUTER_DEFAULT_MODEL=
+OPENROUTER_API_KEY=""
+# Default OpenRouter model (use "" to select manually)
+OPENROUTER_DEFAULT_MODEL=""
 # Temperature for OpenRouter responses (0.0 to 1.0)
 OPENROUTER_TEMPERATURE=0.3
 
 # Ollama Configuration
-# Custom Ollama API URL (leave empty for default)
-OLLAMA_API_URL=
-# Default Ollama model (leave empty to select manually)
-OLLAMA_DEFAULT_MODEL=
+# Custom Ollama API URL (use "" for default)
+OLLAMA_API_URL=""
+# Default Ollama model (use "" to select manually)
+OLLAMA_DEFAULT_MODEL=""
 # Temperature for Ollama responses (0.0 to 1.0)
 OLLAMA_TEMPERATURE=0.3
 
 # OpenAI-compatible Configuration
 # Custom OpenAI-compatible API URL (e.g., https://api.openai.com/v1/chat/completions)
-OPENAI_API_URL=
+OPENAI_API_URL=""
 # API key for OpenAI-compatible API
-OPENAI_API_KEY=
+OPENAI_API_KEY=""
 # Default model name (e.g., gpt-4, claude-3-opus, etc.)
-OPENAI_DEFAULT_MODEL=
+OPENAI_DEFAULT_MODEL=""
 # Temperature for OpenAI-compatible responses (0.0 to 1.0)
 OPENAI_TEMPERATURE=0.3
+
